test/scc_test/stmt/semantic-errors/051.t
int* test()
{
    char* b;
    return b;
}